// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBallotsToAudit handles not having sample size options 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form-two"
        id="formTwo"
      >
        <hr />
        <div
          class="sc-ifAKCX dUfgxM"
        >
          <h2
            class="bp3-heading sc-bxivhb jFEWwS"
          />
          <h2
            class="bp3-heading sc-bxivhb jFEWwS"
          >
            Select Ballots to Audit
          </h2>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Number of Audit Boards
            </h3>
            <label
              for="auditBoards"
            >
              Set the number of audit boards you wish to use.
              <div
                class="bp3-html-select"
              >
                <select
                  field="[object Object]"
                  form="[object Object]"
                  id="auditBoards"
                >
                  <option>
                    1
                  </option>
                  <option>
                    2
                  </option>
                  <option>
                    3
                  </option>
                  <option>
                    4
                  </option>
                  <option>
                    5
                  </option>
                  <option>
                    6
                  </option>
                  <option>
                    7
                  </option>
                  <option>
                    8
                  </option>
                  <option>
                    9
                  </option>
                  <option>
                    10
                  </option>
                  <option>
                    11
                  </option>
                  <option>
                    12
                  </option>
                  <option>
                    13
                  </option>
                  <option>
                    14
                  </option>
                  <option>
                    15
                  </option>
                </select>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
            </label>
          </div>
          <div
            class="sc-bdVaJa fdbLH"
          >
            <h3
              class="bp3-heading sc-htpNat cNFUHJ"
            >
              Ballot Manifest
            </h3>
            <div
              class="sc-bwzfXH izcbHX"
            >
              Click "Browse" to choose the appropriate Ballot Manifest file from your computer
            </div>
            <label
              class="bp3-file-input"
            >
              <input
                accept=".csv"
                name="manifest"
                type="file"
              />
              <span
                class="bp3-file-upload-input"
              >
                Select manifest...
              </span>
            </label>
          </div>
        </div>
        <div
          class="sc-EHOje kPsGPf"
        >
          <button
            class="bp3-button bp3-intent-primary"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Select Ballots To Audit
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form-two"
      id="formTwo"
    >
      <hr />
      <div
        class="sc-ifAKCX dUfgxM"
      >
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        />
        <h2
          class="bp3-heading sc-bxivhb jFEWwS"
        >
          Select Ballots to Audit
        </h2>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Number of Audit Boards
          </h3>
          <label
            for="auditBoards"
          >
            Set the number of audit boards you wish to use.
            <div
              class="bp3-html-select"
            >
              <select
                field="[object Object]"
                form="[object Object]"
                id="auditBoards"
              >
                <option>
                  1
                </option>
                <option>
                  2
                </option>
                <option>
                  3
                </option>
                <option>
                  4
                </option>
                <option>
                  5
                </option>
                <option>
                  6
                </option>
                <option>
                  7
                </option>
                <option>
                  8
                </option>
                <option>
                  9
                </option>
                <option>
                  10
                </option>
                <option>
                  11
                </option>
                <option>
                  12
                </option>
                <option>
                  13
                </option>
                <option>
                  14
                </option>
                <option>
                  15
                </option>
              </select>
              <span
                class="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </label>
        </div>
        <div
          class="sc-bdVaJa fdbLH"
        >
          <h3
            class="bp3-heading sc-htpNat cNFUHJ"
          >
            Ballot Manifest
          </h3>
          <div
            class="sc-bwzfXH izcbHX"
          >
            Click "Browse" to choose the appropriate Ballot Manifest file from your computer
          </div>
          <label
            class="bp3-file-input"
          >
            <input
              accept=".csv"
              name="manifest"
              type="file"
            />
            <span
              class="bp3-file-upload-input"
            >
              Select manifest...
            </span>
          </label>
        </div>
      </div>
      <div
        class="sc-EHOje kPsGPf"
      >
        <button
          class="bp3-button bp3-intent-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Select Ballots To Audit
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SelectBallotsToAudit renders correctly 1`] = `
<div>
  <form
    data-testid="form-two"
    id="formTwo"
  >
    <hr />
    <div
      class="sc-ifAKCX dUfgxM"
    >
      <h2
        class="bp3-heading sc-bxivhb jFEWwS"
      />
      <h2
        class="bp3-heading sc-bxivhb jFEWwS"
      >
        Select Ballots to Audit
      </h2>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Estimated Sample Size
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          Choose the initial sample size for each contest you would like to use for Round 1 of the audit from the options below.
        </div>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <div>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                checked=""
                name="sampleSize[contest-1]"
                type="radio"
                value="269"
              />
              <span
                class="bp3-control-indicator"
              />
              BRAVO Average Sample Number: 
              269 samples
              
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="sampleSize[contest-1]"
                type="radio"
                value="379"
              />
              <span
                class="bp3-control-indicator"
              />
              
              379 samples
               (80% chance of reaching risk limit and completing the audit in one round)
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="sampleSize[contest-1]"
                type="radio"
                value="78"
              />
              <span
                class="bp3-control-indicator"
              />
              
              78 samples
              
            </label>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Number of Audit Boards
        </h3>
        <label
          for="auditBoards"
        >
          Set the number of audit boards you wish to use.
          <div
            class="bp3-html-select"
          >
            <select
              field="[object Object]"
              form="[object Object]"
              id="auditBoards"
            >
              <option>
                1
              </option>
              <option>
                2
              </option>
              <option>
                3
              </option>
              <option>
                4
              </option>
              <option>
                5
              </option>
              <option>
                6
              </option>
              <option>
                7
              </option>
              <option>
                8
              </option>
              <option>
                9
              </option>
              <option>
                10
              </option>
              <option>
                11
              </option>
              <option>
                12
              </option>
              <option>
                13
              </option>
              <option>
                14
              </option>
              <option>
                15
              </option>
            </select>
            <span
              class="bp3-icon bp3-icon-double-caret-vertical"
              icon="double-caret-vertical"
            >
              <svg
                data-icon="double-caret-vertical"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  double-caret-vertical
                </desc>
                <path
                  d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </label>
      </div>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Manifest
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          Click "Browse" to choose the appropriate Ballot Manifest file from your computer
        </div>
        <label
          class="bp3-file-input"
        >
          <input
            accept=".csv"
            name="manifest"
            type="file"
          />
          <span
            class="bp3-file-upload-input"
          >
            Select manifest...
          </span>
        </label>
      </div>
    </div>
    <div
      class="sc-EHOje kPsGPf"
    >
      <button
        class="bp3-button bp3-intent-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          Select Ballots To Audit
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`SelectBallotsToAudit renders correctly 2`] = `
<div>
  <form
    data-testid="form-two"
    id="formTwo"
  >
    <hr />
    <div
      class="sc-ifAKCX dUfgxM"
    >
      <h2
        class="bp3-heading sc-bxivhb jFEWwS"
      />
      <h2
        class="bp3-heading sc-bxivhb jFEWwS"
      >
        Select Ballots to Audit
      </h2>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Estimated Sample Size
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          Choose the initial sample size for each contest you would like to use for Round 1 of the audit from the options below.
        </div>
        <div
          class="sc-bwzfXH izcbHX"
        >
          <div>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                checked=""
                name="sampleSize[contest-1]"
                type="radio"
                value="269"
              />
              <span
                class="bp3-control-indicator"
              />
              BRAVO Average Sample Number: 
              269 samples
              
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="sampleSize[contest-1]"
                type="radio"
                value="379"
              />
              <span
                class="bp3-control-indicator"
              />
              
              379 samples
               (80% chance of reaching risk limit and completing the audit in one round)
            </label>
            <label
              class="bp3-control bp3-radio"
            >
              <input
                name="sampleSize[contest-1]"
                type="radio"
                value="78"
              />
              <span
                class="bp3-control-indicator"
              />
              
              78 samples
              
            </label>
          </div>
        </div>
      </div>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Number of Audit Boards
        </h3>
        <label
          for="auditBoards"
        >
          Set the number of audit boards you wish to use.
          <div
            class="bp3-html-select"
          >
            <select
              field="[object Object]"
              form="[object Object]"
              id="auditBoards"
            >
              <option>
                1
              </option>
              <option>
                2
              </option>
              <option>
                3
              </option>
              <option>
                4
              </option>
              <option>
                5
              </option>
              <option>
                6
              </option>
              <option>
                7
              </option>
              <option>
                8
              </option>
              <option>
                9
              </option>
              <option>
                10
              </option>
              <option>
                11
              </option>
              <option>
                12
              </option>
              <option>
                13
              </option>
              <option>
                14
              </option>
              <option>
                15
              </option>
            </select>
            <span
              class="bp3-icon bp3-icon-double-caret-vertical"
              icon="double-caret-vertical"
            >
              <svg
                data-icon="double-caret-vertical"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  double-caret-vertical
                </desc>
                <path
                  d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </label>
      </div>
      <div
        class="sc-bdVaJa fdbLH"
      >
        <h3
          class="bp3-heading sc-htpNat cNFUHJ"
        >
          Ballot Manifest
        </h3>
        <div
          class="sc-bwzfXH izcbHX"
        >
          Click "Browse" to choose the appropriate Ballot Manifest file from your computer
        </div>
        <label
          class="bp3-file-input"
        >
          <input
            accept=".csv"
            name="manifest"
            type="file"
          />
          <span
            class="bp3-file-upload-input"
          >
            Select manifest...
          </span>
        </label>
      </div>
    </div>
    <div
      class="bp3-spinner"
    >
      <div
        class="bp3-spinner-animation"
      >
        <svg
          height="50"
          stroke-width="8.00"
          viewBox="1.00 1.00 98.00 98.00"
          width="50"
        >
          <path
            class="bp3-spinner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            class="bp3-spinner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            stroke-dasharray="280 280"
            stroke-dashoffset="210"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;
